setting: Swagger 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,20 @@ logging:
           neo4j: DEBUG
       hibernate:
         SQL: DEBUG
+
+springdoc:
+  swagger-ui:
+    path: /api/v2 # 접속 경로
+    groups-order: DESC # 내림차순
+    tags-sorter: alpha # 알파벳순 정렬
+    operations-sorter: method # 메소드 별 정렬
+    disable-swagger-default-url: true
+    display-request-duration: true
+  api-docs:
+    path: /v2/api-docs
+  show-actuator: true
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
+  writer-with-default-pretty-printer: true # 예쁘게
+  paths-to-match:
+    - /api/v2/**
