feat: 디버깅을 위한 로깅 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,10 +41,12 @@ logging:
   level:
     org:
       springframework:
+        security: DEBUG
         data:
           neo4j: DEBUG
       hibernate:
         SQL: DEBUG
+
 
 springdoc:
   swagger-ui:
