--- a/build.gradle
+++ b/build.gradle
@@ -35,25 +35,33 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	// 달리
+	// OpenAI
+	implementation 'com.theokanning.openai-gpt3-java:client:0.12.0'
+	implementation 'com.theokanning.openai-gpt3-java:service:0.12.0'
+//	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
+
+	// Stripe
+	implementation 'com.stripe:stripe-java:22.10.0'
+
+	// JAXB API
+	implementation 'javax.xml.bind:jaxb-api:2.3.0'
+
+	// Platform.sh config reader
+	implementation 'sh.platform:config:2.2.2'
+
+	// AWS
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.1.RELEASE'
+
+	// WebFlux
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	// Spring Security OAuth2 Client
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+	// JWT Support
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-
-	implementation 'com.theokanning.openai-gpt3-java:client:0.12.0'
-	implementation 'com.theokanning.openai-gpt3-java:service:0.12.0'
-
-	implementation 'com.stripe:stripe-java:22.10.0'
-	implementation 'javax.xml.bind:jaxb-api:2.3.0'
-	implementation 'sh.platform:config:2.2.2'
-
-	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.1.RELEASE'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // 스프링 시큐리티
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
-	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' // jwt
 }
 
 tasks.named('test') {
