--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,10 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+	// Webp
+	implementation 'com.sksamuel.scrimage:scrimage-core:4.1.1'
+	implementation 'com.sksamuel.scrimage:scrimage-webp:4.1.1'
 }
 
 tasks.named('test') {
