--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,11 +42,11 @@ services:
       - "5050:80"
     # 환경 변수 설정
     environment:
-      PGADMIN_DEFAULT_EMAIL: nextpage@domain.com
-      PGADMIN_DEFAULT_PASSWORD: password
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
     # 볼륨 설정
     volumes:
-      - ./data/pgadmin/:/var/lib/pgadmin
+      - ./nextpage-db/pgadmin/:/var/lib/pgadmin
     networks:
       - npage
 
