--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,8 @@ services:
 #      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
 #      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
 #      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
+#      NEO4J_URI: ${SPRING_NEO4J_URI}
+#      NEO4J_PASSWORD: ${SPRING_NEO4J_PASSWORD}
 #    networks:
 #      - npage
 
