--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,13 @@
 name: CI
 
 on:
-    push:
-      branches:
-        - main
+  push:
+    branches:
+      - main
+      - develop
 
 jobs:
   build-and-test:
-      # main에 push하거나, Backend branch에서 pull_request를 요청했을 경우
     if: ${{ !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip backend]') && (github.event_name == 'push' || (github.event_name == 'pull_request' && contains(github.head_ref, '/be/'))) }}
 
     runs-on: ubuntu-22.04
