--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,24 +5,27 @@ on:
     branches:
       - main
       - develop
+  pull_request:
+    branches:
+      - develop
+
 
 jobs:
   build-and-test:
-    if: ${{ !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip backend]') && (github.event_name == 'push' || (github.event_name == 'pull_request' && contains(github.head_ref, '/be/'))) }}
-
     runs-on: ubuntu-22.04
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v2
-      with:
-        java-version: '17'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
 
-    - name: Build with Gradle
-      run: ./gradlew build
+      - name: Build with Gradle
+        run: ./gradlew build
 
-    - name: Run Tests
-      run: ./gradlew test
+      - name: Run Tests
+        run: ./gradlew test
