feat: K6, InfluxDB 컨테이너 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,40 @@ services:
     volumes:
       - './monitoring/grafana:/var/lib/grafana'
     restart: always
+    environment:
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_BASIC_ENABLED=false
+    networks:
+      - npage
+
+  k6:
+    image: grafana/k6:latest
+    container_name: k6
+    networks:
+      - npage
+    ports:
+      - "6565:6565"
+    environment:
+      - K6_OUT=influxdb=http://influxdb:8086/k6
+    volumes:
+      - ./monitoring/k6:/scripts
+    extra_hosts:
+      - "host.docker.internal:host-gateway" # 호스트와 연결(로컬테스트를 위함)
+    command: ["run", "/scripts/test_script.js"]
+
+  influxdb:
+    image: influxdb:1.8
+    ports:
+      - "8086:8086"
+    environment:
+      - INFLUXDB_DB=k6
+    restart: on-failure # 실패 시 재시작
+    networks:
+      - npage
 
 networks:
   npage:
     driver: bridge
+
+
