--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,26 +53,26 @@ services:
       - npage
 
   # 스프링 로컬로 실행 시 주석 처리하고 DB만 도커 빌드
-  springboot:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    restart: always
-    depends_on:
-      - neo4j
-      - postgresql
-    ports:
-      - 8080:8080
-    container_name: springboot
-    environment:
-      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
-      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
-      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
-      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
-      NEO4J_URI: ${SPRING_NEO4J_URI}
-      NEO4J_PASSWORD: ${SPRING_NEO4J_PASSWORD}
-    networks:
-      - npage
+#  springboot:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    restart: always
+#    depends_on:
+#      - neo4j
+#      - postgresql
+#    ports:
+#      - 8080:8080
+#    container_name: springboot
+#    environment:
+#      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+#      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
+#      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+#      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
+#      NEO4J_URI: ${SPRING_NEO4J_URI}
+#      NEO4J_PASSWORD: ${SPRING_NEO4J_PASSWORD}
+#    networks:
+#      - npage
 
   # Monitoring
   grafana:
@@ -120,5 +120,3 @@ services:
 networks:
   npage:
     driver: bridge
-
-
