--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.4'
 	id 'org.hibernate.orm' version '6.4.4.Final'
 	id 'org.graalvm.buildtools.native' version '0.9.28'
+	id 'jacoco'
 }
 
 group = 'com'
@@ -81,5 +82,20 @@ tasks.named('test') {
 hibernate {
 	enhancement {
 		enableAssociationManagement = true
+	}
+}
+
+jacoco {
+	toolVersion = "0.8.7"
+}
+
+test {
+	finalizedBy jacocoTestReport // 테스트가 끝난 후 커버리지 보고서 생성
+}
+
+jacocoTestReport {
+	reports {
+		xml.required = true
+		html.required = true
 	}
 }
